Patch the `serialport` dependency to use the git repository instead

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
+[patch.crates-io]
+serialport = { git = "https://github.com/serialport/serialport-rs" }
+
 [workspace]
 members = [
     "cargo-espflash",
